# vrc_avatar_changer2

./: README.md  package-lock.json  package.json
.github/workflow/: publish.yml
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AvatarChangeDialog.vue  AvatarDetail.vue  AvatarList.vue  TagEditor.vue  TagInput.vue
src/composable/: useVRChatApi.js
vrc_avatar_change2/: package.json
vrc_avatar_change2/src/: App.vue  main.ts
vrc_avatar_change2/src-tauri/: Cargo.toml  tauri.conf.json
vrc_avatar_change2/src-tauri/capabilities/: default.json
vrc_avatar_change2/src/components/: AvatarChangeDialog.vue  AvatarDescriptionDialog.vue  LoginDialog.vue  TagEditor.vue  TagEditorDialog.vue
vrc_avatar_change2/src/composable/: useVRChatApi.js
