[package]
name = "vrc_avatar_change2"
version = "1.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vrc_avatar_change2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.1", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.1", features = [] }
tauri-plugin-shell = "2.0.0-rc.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0-rc.1", features = ["cookies", "unsafe-headers"] }
